# logging_custom

./: .gitignore  README.md  logger.py  pyproject.toml
base/: formatter.py  processors.py
custom_logging/: logger.py
custom_logging/base/: formatter.py
custom_logging/settings/: base_processors.py  logging_config.py  schemas.py
logging_custom/: logger.py
logging_custom/base/: formatter.py
logging_custom/common/: color.py  formatter.py  processors.py
logging_custom/default/: logging_config.py  processors.py
logging_custom/settings/: base_processors.py  structlog_config.py
settings/: logging_config.py  processors.py  structlog_config.py
structlog_logging/: logger.py
structlog_logging/base/: formatter.py
structlog_logging/settings/: base_processors.py  logging_config.py  processors.py  structlog_config.py
