[tool.poetry]
name = "structlog-logging"
version = "0.1.0"
description = ""
authors = ["Сергей Хадкевич <s.hadkevich@agima.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.2.0"
colorama = "^0.4.6"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
