[tool.poetry]
name = "logging_custom"
version = "0.1.1"
description = ""
authors = ["Сергей Хадкевич <s.hadkevich@agima.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
